# chads-davinci-script

./: .gitignore  CHANGELOG.md  LICENSE  MAINTAINING.md  README.md  app_entry.py  build_and_sign.sh  build_fast.sh  dmg_settings.py  entitlements.plist  preview_preset.py  pyproject.toml  setup.py  test_text_overlay.py
.github/: RELEASE_SETUP.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/: AppIcon.icns
src/chads_davinci/: __init__.py  __main__.py  about_window.py  bin_editor.py  build_main.py  build_worker.py  console_log.py  diagnostics.py  file_picker.py  manual_window.py  menu_bar.py  metadata.py  models.py  paths.py  progress_window.py  quadrant_settings.py  resolve_connection.py  settings_io.py  theme.py  ui_automation.py
